# yew-fmt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test.rs
.github/: FUNDING.yml
src/: config.rs  css.rs  formatter.rs  html.rs  main.rs  utils.rs
src/html/: base.rs  ext.rs  mod.rs  visitor.rs
tests/: main.rs
tests/common/: mod.rs
tests/samples/base_and_ext_coexist_peacefully/: source.rs  target.rs
tests/samples/block_in_prop/: source.rs  target.rs
tests/samples/breaking_propagated/: source.rs  target.rs
tests/samples/comments_in_empty_macro/: source.rs  target.rs
tests/samples/elements_broken_up/: source.rs  target.rs
tests/samples/for_block/: source.rs  target.rs
tests/samples/hard_tabs/: source.rs  target.rs
tests/samples/html_for/: source.rs  target.rs
tests/samples/html_let/: source.rs  target.rs
tests/samples/html_match/: source.rs  target.rs
tests/samples/issue_1/: target.rs
tests/samples/issue_10/: source.rs  target.rs
tests/samples/issue_12/: source.rs  target.rs
tests/samples/issue_13/: source.rs  target.rs
tests/samples/issue_14/: source.rs  target.rs
tests/samples/issue_16/: source.rs  target.rs
tests/samples/issue_17/: source.rs  target.rs
tests/samples/issue_19/: source.rs  target.rs
tests/samples/issue_2/: source.rs  target.rs
tests/samples/issue_21/: source.rs  target.rs
tests/samples/issue_22/: source.rs  target.rs
tests/samples/issue_24/: source.rs  target.rs
tests/samples/issue_3/: source.rs  target.rs
tests/samples/issue_30/: source.rs  target.rs
tests/samples/issue_31/: source.rs  target.rs
tests/samples/issue_5/: source.rs  target.rs
tests/samples/issue_6/: source.rs
tests/samples/issue_7/: source.rs  target.rs
tests/samples/issue_8/: source.rs  target.rs
tests/samples/issue_9/: source.rs  target.rs
tests/samples/long_css/: source.rs  target.rs
tests/samples/match_arms_on_multiple_lines/: source.rs  target.rs
tests/samples/max_small_heuristics/: source.rs  target.rs
tests/samples/nested_macro/: source.rs  target.rs
tests/samples/no_small_heuristics/: source.rs  target.rs
