[package]
name = "yew-fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1.0.69", features = ["span-locations"] }
syn = { version = "2.0.39", features = [
	"full", "printing", "visit", "visit-mut"
]}
quote = "1.0.33"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.75"
codespan-reporting = "0.11.1"
