[package]
name = "yew-fmt"
version = "0.2.3"
edition = "2021"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/yew-fmt"
license = "MIT"
keywords = ["yew", "formatter"]
categories = ["development-tools"]
description = "Code formatter for the Yew framework"

[dependencies]
proc-macro2 = { version = "1.0.69", features = ["span-locations"] }
syn = { version = "2.0.39", features = ["full", "printing", "visit"] }
quote = "1.0.33"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.75"
codespan-reporting = "0.11.1"
diffy = "0.3.0"
toml = { version = "0.8.8", default_features = false, features = ["parse"] }
serde = { version = "1.0.193", features = ["derive"] }
dirs = "5.0.1"
bumpalo = { version = "3.14.0", features = ["collections"] }

[features]
regen-tests = [] # solely for testing
