[package]
name = "yew-fmt"
version = "0.6.1"
edition = "2021"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/yew-fmt"
license = "MIT"
keywords = ["yew", "formatter", "rustfmt"]
categories = ["development-tools"]
description = "Code formatter for the Yew framework"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "printing", "visit"] }
quote = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
codespan-reporting = "0.11.1"
diffy = "0.3.0"
basic-toml = "0.1.0"
serde = { version = "1", features = ["derive"] }
dirs = "5"
bumpalo = { version = "3", features = ["collections"] }
shrimple-parser = { version = "0.0.12", features = ["either", "proc-macro2"] }
either = "1"

[build-dependencies]
anyhow = "1"

[features]
regen-tests = [] # solely for testing

[lints.clippy]
unit_arg = "allow"

single_char_lifetime_names = "warn"
deref_by_slicing = "warn"
derive_partial_eq_without_eq = "warn"
unwrap_used = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
